k8s/yamls/03-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: my-irc-deployment
  namespace: my-irc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: my-irc
    spec:
      containers:
      - name: my-irc
        image: lereverandnox/my_irc
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 2
          timeoutSeconds: 2
        ports:
        - containerPort: 80
          protocol: TCP
          name: my-irc-http
      restartPolicy: Always
