k8s/yamls/05-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-irc-service
  namespace: my-irc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: my-irc
